feat:Added Log4j2 configurations and using annotions to get the elements.